<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="text_empty" translatable="false">-</string>
    <string name="se_photo" translatable="false">photo</string>
    <string name="se_name" translatable="false">name</string>
    <string name="se_desc" translatable="false">desc</string>

    <string name="app_name">Story App</string>
    <string name="title_welcome">Welcome to Story App</string>
    <string name="desc_welcome">Here, you can share your unique experiences and explore inspiring stories shared by other users on this platform.</string>
    <string name="desc_login">Login now to explore fascinating stories and share your incredible experiences.</string>
    <string name="desc_register">Join now to share experiences and discover inspiring stories.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="insert_name">Enter your name</string>
    <string name="insert_email">Enter your email</string>
    <string name="insert_password">Enter your password</string>
    <string name="error_name">Name is less than 3 characters.</string>
    <string name="error_email">Invalid email format.</string>
    <string name="error_password">Password is less than 8 characters.</string>
    <string name="show_password">Show password</string>
    <string name="create_account">Create account</string>
    <string name="login_now">Login now</string>
    <string name="add_story">Add Story</string>
    <string name="detail_story">Detail Story</string>
    <string name="msg_error_form">Make sure there are no error messages</string>
    <string name="msg_empty_form">Please complete all forms</string>
    <string name="dialog_title">Logout of Account?</string>
    <string name="dialog_message">You will be logged out of your account now.</string>
    <string name="dialog_positive">Logout</string>
    <string name="dialog_negative">Cancel</string>
    <string name="oke">Close</string>
    <string name="desc_fab_to_top">Scroll to the top</string>
    <string name="story_unavailable">Story not available</string>
    <string name="story_not_found">Story not found</string>
    <string name="description">Description</string>
    <string name="hint_description">Add photo description</string>
    <string name="upload_story">Upload story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="add_image">Add image</string>
    <string name="delete_image">Delete image</string>
    <string name="msg_empty_image">No images added</string>
    <string name="msg_empty_description">Description cannot be empty</string>
    <string name="find_stories">Find Stories</string>
    <string name="current_location">Add current location</string>
    <string name="location_not_found">Location not found</string>
    <string name="retry">Retry</string>
</resources>