<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_add_stories"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".view.ui.stories.AddStoriesActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_add_stories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar_add_stories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:navigationIconTint="@color/md_theme_onSurface"
            app:title="@string/add_story" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingBottom="@dimen/bottom_padding">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_preview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/img_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="520dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:labelFor="@id/btn_open_gallery"
                android:maxLines="1"
                android:text="@string/add_image"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/btn_delete"
                app:layout_constraintEnd_toStartOf="@+id/btn_delete"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="@+id/img_preview"
                app:layout_constraintTop_toBottomOf="@+id/img_preview" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_delete"
                style="?attr/materialIconButtonFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/delete_image"
                android:enabled="false"
                app:icon="@drawable/icon_delete_24px"
                app:layout_constraintEnd_toEndOf="@+id/img_preview"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/img_preview" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_open_gallery"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/gallery"
                app:icon="@drawable/icon_photo_camera_24px"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@id/btn_delete" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_open_camera"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/camera"
                app:icon="@drawable/icon_photo_gallery_24px"
                app:layout_constraintStart_toEndOf="@+id/btn_open_gallery"
                app:layout_constraintTop_toTopOf="@id/btn_open_gallery" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="40dp"
                android:hint="@string/description"
                app:expandedHintEnabled="false"
                app:hintEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_open_gallery"
                app:layout_constraintWidth_max="488dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_add_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/hint_description"
                    android:imeOptions="actionDone"
                    android:inputType="text|textLongMessage|textAutoCorrect|textCapSentences|textMultiLine"
                    android:lineSpacingExtra="4sp"
                    android:minLines="4"
                    android:padding="16dp"
                    android:scrollbars="vertical"
                    android:singleLine="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/materialCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/current_location"
                app:layout_constraintEnd_toStartOf="@+id/button_add"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/txt_layout_desc"
                app:layout_constraintTop_toBottomOf="@id/txt_layout_desc" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/upload_story"
                app:layout_constraintEnd_toEndOf="@id/txt_layout_desc"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/materialCheckBox"
                app:layout_constraintTop_toBottomOf="@id/txt_layout_desc" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/add_stories_progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:indeterminate="true"
        app:layout_anchor="@id/app_bar_add_stories"
        app:layout_anchorGravity="bottom" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>