<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.stories.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:liftOnScroll="true"
            app:logo="@drawable/logo"
            app:menu="@menu/main_menu" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:visibility="gone">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingTop="8dp"
            android:paddingBottom="@dimen/bottom_padding"
            tools:listitem="@layout/item_story" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/circular_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/empty_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.85"
            android:gravity="center"
            android:lineSpacingExtra="3sp"
            android:padding="16dp"
            android:text="@string/story_unavailable"
            android:textSize="20sp"
            android:visibility="gone"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/retry"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:text="@string/add_story"
        app:icon="@drawable/baseline_add_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_to_top"
        style="?attr/floatingActionButtonSmallSecondaryStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="24dp"
        android:contentDescription="@string/desc_fab_to_top"
        android:src="@drawable/icon_arrow_upward_24"
        android:visibility="invisible"
        app:fabSize="mini"
        app:maxImageSize="20dp"
        tools:visibility="visible" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/linear_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:indeterminate="true"
        app:layout_anchor="@id/app_bar_main"
        app:layout_anchorGravity="bottom" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>